# klondike

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  README.txt  a.klondike
examples/: game1.klondike  predvyhrou.klondike
src/: Card.cpp  Card.hpp  CardStacks.cpp  CardStacks.hpp  Command.cpp  Command.hpp  Controller.cpp  Controller.hpp  Deck.cpp  Deck.hpp  Error.cpp  Error.hpp  Makefile-terminal  TerminalCanvas.cpp  TerminalCanvas.hpp  TerminalView.cpp  TerminalView.hpp  View.cpp  View.hpp  cardselection.cpp  cardselection.h  cardselection.ui  cardview.cpp  cardview.h  cardview.ui  deck_test.cpp  deckview.cpp  deckview.h  deckview.ui  framesecond.cpp  framesecond.h  framesecond.ui  icons.qrc  klondike.pro  main.cpp  main_terminal.cpp  mainpage.dox  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+14 more)
